Polish devcontainer, consolidate READMEs, modernize frontend and backend code
DevContainer:
- Add Keycloak 24 service for full dev environment
- Fix Kafka networking (dual listeners for internal/external access)
- Update Angular CLI 20 → 21, fix Spring Boot version references
- Replace MSSQL extension with generic database client
- Add Keycloak port forwarding (8180)

README:
- Consolidate .devcontainer/README.md into main README
- Add comprehensive Dev Container section with setup, URLs, commands, troubleshooting
- Delete standalone .devcontainer/README.md

Frontend (Angular 21):
- Migrate all templates from *ngIf/*ngFor to @if/@for built-in control flow
- Remove redundant standalone: true (default in Angular 21)
- Remove unnecessary CommonModule imports
- Remove duplicate service providers from main.ts (already providedIn: root)
- Fix copyright year to 2025

Backend (Spring Boot):
- DRY up GlobalExceptionHandler: upgrade common module with Lombok @Data/@Builder
  ErrorResponse, remove 130-line duplicates from user-app and order-app
- Use Lombok @Data on AppProperties in both services
- Make Constants a final utility class with private constructor
- Use List.of() instead of Arrays.asList() in SecurityConfig (Java 21)
- Add @EnableWebSecurity to order-app SecurityConfig for consistency
- Fix User.java annotation indentation
- Fix controller parameter naming (User u → User user)

Other:
- Improve sonar-project.properties with proper module structure,
  fix missing test sources, remove hardcoded admin assignee
- Keep dependency-check-suppressions.xml (OWASP/Jenkins, not SonarQube)
- Keep docker-compose.test.yml (CI integration tests, not replaced by devcontainer)

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>